Migration of color templates and data

--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.56",
     "@docusaurus/preset-classic": "^2.0.0-alpha.56",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.39",
+    "antd": "^4.3.0",
+    "catalog": "^3.6.0",
     "classnames": "^2.2.6",
     "docusaurus-plugin-sass": "^0.1.8",
     "react": "^16.8.4",
+    "react-color-tools": "^1.0.0",
     "react-dom": "^16.8.4",
+    "react-sticky": "^6.0.3",
     "webpack": "^4.43.0"
   },
   "browserslist": {
@@ -30,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "remark-admonitions": "^1.2.1",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2"
   }
