Updated pixel to 10

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@docusaurus/core": "^2.0.0-alpha.58",
     "@docusaurus/preset-classic": "^2.0.0-alpha.58",
     "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.39",
-    "@so-boss/pixel": "^0.1.8",
+    "@so-boss/pixel": "^0.1.10",
     "antd": "^4.3.0",
     "classnames": "^2.2.6",
     "docusaurus-plugin-sass": "^0.1.9",
     "parcel": "^1.12.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-select": "^3.1.0",
     "react-sticky": "^6.0.3",
     "webpack": "^4.43.0"
   },
