--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@apollo/client": "^3.2.1",
     "@docusaurus/core": "2.0.0-alpha.64",
     "@docusaurus/plugin-client-redirects": "2.0.0-alpha.64",
+    "@docusaurus/plugin-content-docs": "^2.0.0-alpha.64",
+    "@docusaurus/plugin-content-pages": "^2.0.0-alpha.64",
     "@docusaurus/plugin-ideal-image": "2.0.0-alpha.64",
     "@docusaurus/plugin-pwa": "2.0.0-alpha.64",
-    "@docusaurus/preset-classic": "2.0.0-alpha.64",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.64",
     "@docusaurus/theme-live-codeblock": "2.0.0-alpha.64",
     "@so-boss/pixel": "^0.1.10",
     "antd": "^4.3.0",
@@ -24,12 +26,8 @@
     "docusaurus-plugin-sass": "^0.1.11",
     "graphql": "15.3.0",
     "jsonpath": "^1.0.2",
-    "parcel": "^1.12.4",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-select": "^3.1.0",
-    "react-sticky": "^6.0.3",
-    "webpack": "^4.43.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "browserslist": {
     "production": [
@@ -44,10 +42,11 @@
     ]
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
     "react-color-tools": "^1.0.0",
     "remark-admonitions": "^1.2.1",
     "sass": "^1.26.7",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
