--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "docusaurus deploy",
+    "version": "docusaurus doc:version"
   },
   "dependencies": {
     "@apollo/client": "^3.2.1",
