--- a/package.json
+++ b/package.json
@@ -42,9 +42,6 @@
     ]
   },
   "devDependencies": {
-    "react-color-tools": "^1.0.0",
-    "remark-admonitions": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "react-color-tools": "^1.0.0"
   }
 }
