--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
+    "serve": "docusaurus serve",
     "version": "docusaurus doc:version"
   },
   "dependencies": {
