--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "react-color-tools": "^1.0.0"
+    "react-color-tools": "^1.0.0",
+    "webpack": "^4.44.2"
   }
 }
