--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start --no-open true --port 80 --host 0.0.0.0",
+    "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve",
+    "serve": "docusaurus serve --build --port 80 --host 0.0.0.0",
     "version": "docusaurus doc:version"
   },
   "dependencies": {
@@ -26,9 +26,9 @@
     "graphql": "15.3.0",
     "jsonpath": "^1.0.2",
     "node-sass": "^4.14.1",
+    "offix-client": "^0.15.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "sass-loader": "^10.0.3"
+    "react-dom": "^16.13.1"
   },
   "browserslist": {
     "production": [
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "react-color-tools": "^1.0.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "webpack": "^4.44.2"
   },
   "peerDependencies": {
