--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.1",
+    "@docusaurus/core": "^2.0.0-alpha.65",
+    "@docusaurus/lqip-loader": "2.0.0-alpha.65",
     "@docusaurus/plugin-client-redirects": "2.0.0-alpha.65",
     "@docusaurus/plugin-content-docs": "^2.0.0-alpha.65",
     "@docusaurus/plugin-content-pages": "^2.0.0-alpha.65",
@@ -23,12 +25,12 @@
     "antd": "^4.3.0",
     "classnames": "^2.2.6",
     "docusaurus-plugin-sass": "^0.1.11",
-    "graphql": "15.3.0",
     "jsonpath": "^1.0.2",
     "node-sass": "^4.14.1",
     "offix-client": "^0.15.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typescript": "^4.0.3"
   },
   "browserslist": {
     "production": [
@@ -43,10 +45,13 @@
     ]
   },
   "devDependencies": {
+    "graphql": "^15.3.0",
     "react-color-tools": "^1.0.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
-    "webpack": "^4.44.2"
+    "ts-loader": "^8.0.4",
+    "webpack": "^4.44.2",
+    "webpack-graphql-loader": "^1.0.2"
   },
   "peerDependencies": {
     "@docusaurus/core": "2.0.0-alpha.65"
