--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "version": "docusaurus doc:version"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.1",
+    "@apollo/client": "^3.2.3",
     "@docusaurus/core": "^2.0.0-alpha.65",
     "@docusaurus/lqip-loader": "2.0.0-alpha.65",
     "@docusaurus/plugin-client-redirects": "2.0.0-alpha.65",
@@ -25,7 +25,10 @@
     "antd": "^4.3.0",
     "classnames": "^2.2.6",
     "docusaurus-plugin-sass": "^0.1.11",
+    "file-loader": "^6.1.1",
     "jsonpath": "^1.0.2",
+    "jsonpath-plus": "^4.0.0",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "offix-client": "^0.15.5",
     "react": "^16.13.1",
