--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-source-graphql": "^2.7.6",
     "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.17",
+    "jsonpath-plus": "^4.0.0",
     "lodash": "^4.17.20",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.1.0",
