--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@loadable/component": "5.13.1",
     "@mdx-js/mdx": "^1.5.9",
     "@theme-ui/presets": "^0.3.0",
+    "antd": "^4.7.2",
     "gatsby": "^2.20.36",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-catch-links": "^2.1.4",
