--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@babel/core": "^7.12.3",
     "@lekoarts/gatsby-theme-specimens": "^2.3.5",
     "@loadable/component": "5.13.1",
     "@mdx-js/mdx": "^1.5.9",
@@ -50,7 +51,8 @@
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
     "remark-slug": "^5.1.2",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
