--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lekoarts/gatsby-theme-specimens": "^2.3.5",
     "@loadable/component": "5.13.1",
     "@mdx-js/mdx": "^1.5.9",
+    "@so.boss/genesis-icon-library": "^0.0.2",
     "@theme-ui/presets": "^0.3.0",
     "antd": "^4.7.2",
     "gatsby": "^2.20.36",
