--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@babel/core": "^7.12.3",
     "@lekoarts/gatsby-theme-specimens": "^2.3.5",
     "@loadable/component": "5.13.1",
+    "@material-ui/core": "^4.11.0",
     "@mdx-js/mdx": "^1.5.9",
-    "@so.boss/genesis-icon-library": "^0.0.2",
+    "@so.boss/genesis-icon-library": "^0.0.3",
     "@theme-ui/presets": "^0.3.0",
     "antd": "^4.7.2",
     "gatsby": "^2.20.36",
