--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lekoarts/gatsby-theme-specimens": "^2.3.5",
     "@loadable/component": "5.13.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@mdx-js/mdx": "^1.5.9",
     "@so.boss/genesis-icon-library": "^0.0.3",
     "@theme-ui/presets": "^0.3.0",
