--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "node-sass": "^4.14.1",
     "prism-react-renderer": "^1.1.0",
     "react": "^16.13.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
+    "react-number-format": "^4.4.1",
     "remark-slug": "^5.1.2",
     "theme-ui": "^0.3.1",
     "typescript": "^4.0.3"
