--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "antd": "^4.7.2",
     "gatsby": "^2.20.36",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-breadcrumb": "^10.0.0",
     "gatsby-plugin-catch-links": "^2.1.4",
     "gatsby-plugin-emotion": "^4.1.3",
     "gatsby-plugin-layout": "^1.3.13",
