--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.10",
     "gatsby-source-filesystem": "^2.1.10",
     "gatsby-source-graphql": "^2.7.6",
+    "gatsby-source-sanity": "^6.0.4",
     "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.17",
     "jsonpath-plus": "^4.0.0",
