--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "prettier": "2.1.2"
   }
 }
