--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
+    "react-lorem-ipsum": "^1.4.7",
     "react-number-format": "^4.4.1",
     "remark-slug": "^5.1.2",
     "theme-ui": "^0.3.1",
