--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@mdx-js/mdx": "^1.5.9",
     "@so.boss/genesis-icon-library": "^0.0.3",
+    "@so.boss/pixel": "0.1.8",
     "@theme-ui/presets": "^0.3.0",
     "antd": "^4.7.2",
     "gatsby": "^2.20.36",
