--- a/studio/package.json
+++ b/studio/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.0.9",
+    "@sanity/cli": "^2.1.0",
     "@sanity/components": "^2.0.9",
     "@sanity/core": "^2.0.9",
     "@sanity/default-layout": "^2.0.9",
