--- a/studio/package.json
+++ b/studio/package.json
@@ -30,10 +30,13 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "sanity-plugin-autocomplete-tags": "^1.0.1",
+    "sanity-plugin-content-calendar": "^1.1.0",
     "sanity-plugin-content-model-graph": "^1.1.1",
     "sanity-plugin-dark-mode": "^0.0.32",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-dashboard-widget-notes": "^0.3.2",
+    "sanity-plugin-media": "^0.4.0",
     "sanity-plugin-minesweeper": "^0.0.3"
   },
   "devDependencies": {}
