moving storybook to its own branch

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mdx-js/mdx": "^1.5.9",
     "@so.boss/genesis-icon-library": "^0.0.3",
     "@so.boss/pixel": "0.1.12",
+    "@storybook/preset-scss": "^1.0.3",
     "@theme-ui/presets": "^0.3.0",
     "antd": "^4.7.2",
     "gatsby": "^2.20.36",
