--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "react-lorem-ipsum": "^1.4.7",
     "react-number-format": "^4.4.1",
     "remark-slug": "^5.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "theme-ui": "^0.3.1",
     "typescript": "^4.0.3"
   },
