--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonpath-plus": "^4.0.0",
     "lodash": "^4.17.20",
     "mdx-utils": "^0.2.0",
+    "next": "^10.0.5",
     "node-sass": "^4.14.1",
     "prism-react-renderer": "^1.1.0",
     "react": "^16.13.1",
@@ -66,17 +67,21 @@
     "remark-slug": "^5.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "storybook-addon-designs": "^5.4.2",
+    "storybook-addon-next-router": "^2.0.3",
     "theme-ui": "^0.3.1",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-knobs": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
     "@storybook/react": "^6.1.14",
     "babel-loader": "^8.2.2",
     "cross-env": "^5.2.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "storybook-react-context": "^0.2.2"
   }
 }
