--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "storybook-addon-designs": "^5.4.2",
     "storybook-addon-next-router": "^2.0.3",
     "theme-ui": "^0.3.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "jquery": "^3.5.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.14",
